--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <div id="instruction">
     <h1>How to play:</h1>
     <br> 
-    <p>Press space bar to jump over the moving block. <br>The block will move faster every 5 points you score<br><br></p>
+    <p>Enter space bar or click anywhere on the screen to jump over the moving block. <br>The block will move faster every 5 points you score.<br><br></p>
     <label for="character-color">Choose Your Character Color:</label>
     <input type="color" id="character-color" name="character-color" value="#ffffff">
-    <p>Click 'Start Game' to begin</p>
+    <p><br>Click 'Start Game' to begin. <br> Enjoy some music by playing the music button below.</p>
 <br>
         <div id="audioid">
             <audio id="myAudio" src="resources/Game1music.mp3" preload="auto" hidden></audio> 
